--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -12,13 +12,73 @@ body {
     background-color: rgb(53, 53, 53);
 }
 
-.Back {
-    width: 3%;
-    height: auto;
-}
-
 .logo {
-    width: 6%;
+    width: 4%;
     height: auto;
     border-radius: 30px;
+}
+
+.tableauID {
+    background-color: #edeeee;
+    color: black;
+    margin-left: 3%;
+    margin-top: 1%;
+    margin-right: 3%;
+    border-radius: 2%;
+}
+
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 94%;
+}
+
+#customers td,
+#customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+    background-color: #ddd;
+}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #379EC1;
+    color: white;
+}
+
+.nav-link {
+    margin-left: 20% !important;
+    font-size: 150%;
+}
+
+.imgProfil {
+    width: 40%;
+    position: relative;
+    float: right;
+    padding-right: 15%;
+}
+
+.Name {
+    padding-top: 5%;
+    padding-left: 15%;
+}
+
+.check {
+    padding-left: 25%;
+    padding-top: 17%;
+}
+
+@media screen and (max-width: 900px) {
+    article {
+        padding: 1rem 3rem;
+    }
 }
