--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -4,7 +4,6 @@
 
 @font-face {
     font-family: "Roboto";
-    src: url('https://www.dafont.com/fr/roboto.font');
 }
 
 body {
@@ -13,7 +12,7 @@ body {
 }
 
 .logo {
-    width: 4%;
+    width: 80px;
     height: auto;
     border-radius: 30px;
 }
@@ -37,6 +36,7 @@ body {
 #customers th {
     border: 1px solid #ddd;
     padding: 8px;
+    text-align: center;
 }
 
 #customers tr:nth-child(even) {
@@ -51,6 +51,7 @@ body {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
+    font-size: 125%;
     background-color: #379EC1;
     color: white;
 }
@@ -74,11 +75,44 @@ body {
 
 .check {
     padding-left: 25%;
-    padding-top: 17%;
+    padding-top: 20%;
 }
 
 @media screen and (max-width: 900px) {
     article {
         padding: 1rem 3rem;
     }
+}
+
+.presentation {
+    padding-top: 5%;
+    padding-bottom: 2%;
+}
+
+.presentation h1,
+.presentation p {
+    text-align: center;
+}
+
+.presentation p {
+    padding-top: 1%;
+    padding-bottom: 2%;
+}
+
+.presentation h1 {
+    padding-top: 0.5%;
+}
+
+.navError {
+    width: 200%;
+}
+
+.msgError h1,
+.msgError p {
+    text-align: center;
+}
+
+.msgError h1 {
+    padding-bottom: 2%;
+    padding-top: 17%;
 }
